// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should match snapshot 1`] = `
<div
  className=""
>
  <input
    disabled={true}
    name="mockName"
    type="checkbox"
  />
  <label>
    mockLabel
  </label>
</div>
`;

exports[`Checkbox should match snapshot when true 1`] = `
<div
  className=""
>
  <input
    disabled={false}
    id="mockName"
    name="mockName"
    type="checkbox"
  />
</div>
`;
